# serializer version: 1
# name: test_date_components[session-tracked-async-day-asyncmy_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DAY FROM date_time_model.date_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-day-asyncpg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DAY FROM date_time_model.date_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-day-psycopg_async_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DAY FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-isoWeekDay-asyncmy_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE weekday(date_time_model.date_col) + %s = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-isoWeekDay-asyncpg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISODOW FROM date_time_model.date_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-isoWeekDay-psycopg_async_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISODOW FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-isoYear-asyncmy_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE date_format(date_time_model.date_col, %s) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-isoYear-asyncpg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISOYEAR FROM date_time_model.date_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-isoYear-psycopg_async_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISOYEAR FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-month-asyncmy_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MONTH FROM date_time_model.date_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-month-asyncpg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MONTH FROM date_time_model.date_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-month-psycopg_async_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MONTH FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-quarter-asyncmy_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(QUARTER FROM date_time_model.date_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-quarter-asyncpg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(QUARTER FROM date_time_model.date_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-quarter-psycopg_async_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(QUARTER FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-week-asyncmy_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE week(date_time_model.date_col, %s) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-week-asyncpg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(WEEK FROM date_time_model.date_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-week-psycopg_async_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(WEEK FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-weekDay-asyncmy_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE date_format(date_time_model.date_col, %s) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-weekDay-asyncpg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DOW FROM date_time_model.date_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-weekDay-psycopg_async_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DOW FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-year-asyncmy_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(YEAR FROM date_time_model.date_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-year-asyncpg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(YEAR FROM date_time_model.date_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-async-year-psycopg_async_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(YEAR FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-sync-day-psycopg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DAY FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-sync-isoWeekDay-psycopg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISODOW FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-sync-isoYear-psycopg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISOYEAR FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-sync-month-psycopg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MONTH FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-sync-quarter-psycopg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(QUARTER FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-sync-week-psycopg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(WEEK FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-sync-weekDay-psycopg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DOW FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_date_components[session-tracked-sync-year-psycopg_engine]
  '''
  SELECT date_time_model.date_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(YEAR FROM date_time_model.date_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-day-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DAY FROM date_time_model.datetime_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-day-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DAY FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-day-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DAY FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-hour-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(HOUR FROM date_time_model.datetime_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-hour-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(HOUR FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-hour-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(HOUR FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-isoWeekDay-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE weekday(date_time_model.datetime_col) + %s = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-isoWeekDay-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISODOW FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-isoWeekDay-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISODOW FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-isoYear-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE date_format(date_time_model.datetime_col, %s) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-isoYear-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISOYEAR FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-isoYear-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISOYEAR FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-minute-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MINUTE FROM date_time_model.datetime_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-minute-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MINUTE FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-minute-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MINUTE FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-month-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MONTH FROM date_time_model.datetime_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-month-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MONTH FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-month-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MONTH FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-quarter-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(QUARTER FROM date_time_model.datetime_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-quarter-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(QUARTER FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-quarter-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(QUARTER FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-second-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(SECOND FROM date_time_model.datetime_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-second-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(SECOND FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-second-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(SECOND FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-week-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE week(date_time_model.datetime_col, %s) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-week-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(WEEK FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-week-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(WEEK FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-weekDay-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE date_format(date_time_model.datetime_col, %s) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-weekDay-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DOW FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-weekDay-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DOW FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-year-asyncmy_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(YEAR FROM date_time_model.datetime_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-year-asyncpg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(YEAR FROM date_time_model.datetime_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-async-year-psycopg_async_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(YEAR FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-day-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DAY FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-hour-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(HOUR FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-isoWeekDay-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISODOW FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-isoYear-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(ISOYEAR FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-minute-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MINUTE FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-month-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MONTH FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-quarter-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(QUARTER FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-second-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(SECOND FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-week-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(WEEK FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-weekDay-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(DOW FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_datetime_components[session-tracked-sync-year-psycopg_engine]
  '''
  SELECT date_time_model.datetime_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(YEAR FROM date_time_model.datetime_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-async-hour-asyncmy_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(HOUR FROM date_time_model.time_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-async-hour-asyncpg_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(HOUR FROM date_time_model.time_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-async-hour-psycopg_async_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(HOUR FROM date_time_model.time_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-async-minute-asyncmy_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MINUTE FROM date_time_model.time_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-async-minute-asyncpg_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MINUTE FROM date_time_model.time_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-async-minute-psycopg_async_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MINUTE FROM date_time_model.time_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-async-second-asyncmy_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(SECOND FROM date_time_model.time_col) = %s
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-async-second-asyncpg_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(SECOND FROM date_time_model.time_col) = $1::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-async-second-psycopg_async_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(SECOND FROM date_time_model.time_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-sync-hour-psycopg_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(HOUR FROM date_time_model.time_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-sync-minute-psycopg_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(MINUTE FROM date_time_model.time_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
# name: test_time_components[session-tracked-sync-second-psycopg_engine]
  '''
  SELECT date_time_model.time_col,
         date_time_model.id
    FROM date_time_model AS date_time_model
   WHERE EXTRACT(SECOND FROM date_time_model.time_col) = %(param_1)s::INTEGER
   ORDER BY date_time_model.id ASC
  '''
# ---
